# rust-quote-editor

./: Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  diesel.toml  fly.toml  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml  deploy.yml
migrations/: 20230408081854_quotes.down.sql  20230408081854_quotes.up.sql  20230413082629_line_item_dates.down.sql  20230413082629_line_item_dates.up.sql  20230413082726_line_items.down.sql  20230413082726_line_items.up.sql
migrations/2023-10-31-123932_quotes/: down.sql  up.sql
migrations/2023-10-31-123938_line_item_dates/: down.sql  up.sql
migrations/2023-10-31-123940_line_items/: down.sql  up.sql
src/: currency.rs  error.rs  forms.rs  layout.rs  main.rs  migrations.rs  rocket_ext.rs  schema.rs  schema.rs.patch  schema.rs.unpatched  time.rs
src/line_item_dates/: controller.rs  mod.rs  model.rs  query.rs  view.rs
src/line_items/: controller.rs  mod.rs  model.rs  query.rs  view.rs
src/quotes/: controller.rs  mod.rs  model.rs  query.rs  view.rs
ui/src/: app.js  main.css
ui/src/controllers/: removals_controller.js
