[package]
name = "axum-hotwire"
version = "0.1.0"
edition = "2021"
rust-version = "1.67.1"
default-run = "demo"

[[bin]]
name = "demo"
path = "src/main.rs"

[profile.release]
lto = true

[dependencies]
anyhow = "1.0"
axum = "0.6"
convert_case = "0.6"
currency_rs = "1.1"
dotenvy = "0.15"
hotwire-turbo = "0.1"
hotwire-turbo-axum = "0.1"
itertools = "0.11"
markup = "0.13"
mime_guess = "2"
nanoid = "0.4"
once_cell = "1"
r2d2 = "0.8"
r2d2_sqlite = "0.22"
regex = "1"
rusqlite = { version = "0.29", features = ["bundled", "serde_json"] }
rusqlite_migration = "1"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.16", features = ["derive"] }
