[package]
name = "axum-hotwire"
version = "0.1.0"
edition = "2021"
rust-version = "1.67.1"
default-run = "demo"

[[bin]]
name = "demo"
path = "src/main.rs"

[profile.release]
lto = true

[dependencies]
anyhow = "1.0"
axum = "0.7"
convert_case = "0.6"
currency_rs = { git = "https://github.com/johnbcodes/currency_rs", branch = "feature/db-diesel2-sqlite", version = "1.1", features = [ "db-diesel2-sqlite" ] }
diesel = { version = "2.1", features = ["r2d2", "sqlite", "time"] }
diesel_migrations = "2.1"
dotenvy = "0.15"
hotwire-turbo = "0.1"
hotwire-turbo-axum = "0.1"
itertools = "0.12"
libsqlite3-sys = { version = "0.27", features = ["bundled"] }
markup = "0.15"
mime_guess = "2"
once_cell = "1"
regex = "1"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = "1.1"
validator = { version = "0.16", features = ["derive"] }
