[package]
name = "rust-quote-editor"
version = "0.1.0"
edition = "2021"
rust-version = "1.78.0"
default-run = "demo"

[[bin]]
name = "demo"
path = "src/main.rs"

[profile.release]
lto = true

[dependencies]
anyhow = "1.0"
currency_rs = { git = "https://github.com/johnbcodes/currency_rs", branch = "feature/db-diesel2-sqlite", version = "1.1", features = ["db-diesel2-sqlite"] }
diesel = { version = "2.2", features = ["sqlite", "time"] }
diesel_migrations = "2.2"
itertools = "0.14"
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
markup = "0.15"
mime_guess = "2"
once_cell = "1"
regex = "1"
rocket = "0.5"
rocket_sync_db_pools = { version = "0.1", features = ["diesel_sqlite_pool"] }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
ulid = "1.1"
